test/pass/pow.fml
int a = pow(2, 3)
print (a)
