test/fail/incompatible_params.fml
def sum (int a, int b):
 int c = a + b

string a
int b
sum(a, b)
